--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-	font-size: 10px;
-}
-body {
-	color: blue;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
