--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,4 +7,10 @@ html {
 	--color-link: #007cee;
 	--text-color-blue: #2a3647;
 	--text-color-black: #000;
+	--fs-small: 16px;
+	--fs-medium: 18px;
+	--fs-big: 20px;
+	--fs-h1: 48px;
+	--fs-input: 20px;
+	--fs-button: 20px;
 }
