--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -6,8 +6,31 @@
 @font-face {
 	font-family: Inter;
 	font-style: normal;
-	font-weight: 400;
 	src: url("/fonts/Inter/inter-v20-latin-regular.woff2") format("woff2");
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Inter;
+	font-style: normal;
+	font-weight: 500;
+	src: url("/fonts/Inter/inter-v20-latin-500.woff2") format("woff2");
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Inter;
+	font-style: normal;
+	font-weight: 600;
+	src: url("/fonts/Inter/inter-v20-latin-600.woff2") format("woff2");
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Inter;
+	font-style: normal;
+	font-weight: 700;
+	src: url("/fonts/Inter/inter-v20-latin-700.woff2") format("woff2");
 	font-display: swap;
 }
 
@@ -23,7 +46,9 @@ body {
 }
 
 // text elements
-p, span, div {
+p,
+span,
+div {
 	font-family: Inter, sans-serif;
 	font-size: var(--fs-text-mobile);
 	font-weight: var(--fw-regular);
@@ -34,7 +59,8 @@ p, span, div {
 }
 
 // small text
-small, .small-text {
+small,
+.small-text {
 	font-family: Inter, sans-serif;
 	font-size: var(--fs-small-mobile);
 	font-weight: var(--fw-regular);
@@ -45,7 +71,9 @@ small, .small-text {
 }
 
 // input fields
-input, textarea, select {
+input,
+textarea,
+select {
 	font-family: Inter, sans-serif;
 	font-size: var(--fs-input-mobile);
 	font-weight: var(--fw-regular);
@@ -55,8 +83,9 @@ input, textarea, select {
 	}
 }
 
-// buttons 
-button, .btn {
+// buttons
+button,
+.btn {
 	font-family: Inter, sans-serif;
 	font-size: var(--fs-button-mobile);
 	font-weight: var(--fw-regular);
@@ -105,6 +134,3 @@ h4 {
 		font-size: var(--fs-h4-desktop);
 	}
 }
-
-
-
