--- a/src/app/main/contacts/add-contact/add-contact.html
+++ b/src/app/main/contacts/add-contact/add-contact.html
@@ -1,1 +1,45 @@
-<p>add-contact works!</p>
+<div class="main">
+	<div class="content">
+		<div class="up">
+			<div>X</div>
+			<div>
+				<h2>Add Contact</h2>
+				<span>Tasks are better with a team!</span>
+			</div>
+			<div class="blueline"></div>
+		</div>
+		<div class="middle"></div>
+		<div class="down">
+			<form>
+				<label for="name"></label><br />
+				<input
+					placeholder="Name"
+					type="text"
+					id="name"
+					name="name"
+					pattern="^[A-ZÄÖÜa-zäöüß]+(?:\s[A-ZÄÖÜa-zäöüß]+)+$"
+					required
+				/><br /><br />
+				<label for="email"></label><br />
+				<input
+					placeholder="Email"
+					type="email"
+					id="email"
+					name="email"
+					pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+					required
+				/><br /><br />
+				<label for="phone"></label><br />
+				<input
+					placeholder="Phone"
+					type="tel"
+					id="phone"
+					name="phone"
+					pattern="^\+?[0-9\s\-]{7,15}$"
+					required
+				/><br /><br />
+				<button type="submit">Create contact</button>
+			</form>
+		</div>
+	</div>
+</div>
