design add Contact

--- a/src/app/main/contacts/add-contact/add-contact.html
+++ b/src/app/main/contacts/add-contact/add-contact.html
@@ -1,14 +1,18 @@
 <div class="main">
+
 	<div class="content">
+
 		<div class="up">
-			<div>X</div>
+			<div class="close">x</div>
 			<div>
-				<h2>Add Contact</h2>
+				<h2>Add contact</h2>
 				<span>Tasks are better with a team!</span>
 			</div>
 			<div class="blueline"></div>
 		</div>
+
 		<div class="middle"></div>
+
 		<div class="down">
 			<form>
 				<label for="name"></label><br />
@@ -19,7 +23,7 @@
 					name="name"
 					pattern="^[A-ZÄÖÜa-zäöüß]+(?:\s[A-ZÄÖÜa-zäöüß]+)+$"
 					required
-				/><br /><br />
+				/>
 				<label for="email"></label><br />
 				<input
 					placeholder="Email"
@@ -28,7 +32,7 @@
 					name="email"
 					pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
 					required
-				/><br /><br />
+				/>
 				<label for="phone"></label><br />
 				<input
 					placeholder="Phone"
@@ -37,9 +41,10 @@
 					name="phone"
 					pattern="^\+?[0-9\s\-]{7,15}$"
 					required
-				/><br /><br />
-				<button type="submit">Create contact</button>
+				/>
+				<button type="submit">Create contact ✓</button>
 			</form>
 		</div>
+
 	</div>
 </div>
