--- a/src/app/main/contacts/add-contact/add-contact.scss
+++ b/src/app/main/contacts/add-contact/add-contact.scss
@@ -1,46 +1,44 @@
+* {
+	font-family: Inter;
+}
+
 .main {
-	width: 340px;
+	width: 300px;
+	height: 680px;
 	border-radius: 20px;
-	overflow: hidden;
-	font-family: Arial, sans-serif;
 	background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-shadow: 5px 5px 5px 0 grey;
 
 	.content {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-    outline: 2px solid red;
 
 		.up {
-			background: #1f2c3c;
+			background: #2a3647;
 			color: #fff;
 			width: 100%;
-      height: 300px;
+			height: 280px;
 			padding: 20px;
 			border-top-left-radius: 20px;
 			border-top-right-radius: 20px;
-			position: relative;
 			text-align: left;
 
-			div:first-child {
-				position: absolute;
-				top: 32px;
-				right: 32px;
+			.close {
+        display: flex;
+        justify-content: flex-end;
 				font-size: 20px;
-				font-weight: bold;
 				cursor: pointer;
 			}
 
 			h2 {
-				font-size: 26px;
+				font-size: 36px;
 				font-weight: 700;
+				padding-top: 40px;
 			}
 
 			span {
-				font-size: 15px;
+				font-size: 18px;
 				color: #d1d5db;
 			}
 
@@ -64,6 +62,7 @@
 				display: block;
 				width: 90px;
 				height: 90px;
+				z-index: 1;
 				border-radius: 50%;
 				background: #e5e7eb;
 				background-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' height='48' width='48'%3E%3Cpath d='M24 24q-3.3 0-5.65-2.35Q16 19.3 16 16t2.35-5.65Q20.7 8 24 8q3.3 0 5.65 2.35Q32 12.7 32 16t-2.35 5.65Q27.3 24 24 24Zm0 20q-4.1 0-7.75-1.55T9.5 37.5q1.45-2.4 4-3.95Q16 32 24 32q8 0 10.5 1.55t4 3.95q-2.45 4.4-6.1 5.95Q28.1 44 24 44Z'/%3E%3C/svg%3E");
@@ -75,26 +74,30 @@
 		}
 
 		.down {
-			padding: 40px 25px;
 			width: 100%;
-      height: 300px;
+			height: 280px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 
 			form {
 				display: flex;
 				flex-direction: column;
-        align-items: center;
+				align-items: center;
+        padding: 0;
+        margin: 0;
+        gap: 8px;
 
 				input {
 					border: 1px solid #d1d5db;
 					border-radius: 10px;
-					padding: 12px 40px 12px 12px;
+					padding: 8px 8px 8px 12px;
 					font-size: 16px;
-					margin-bottom: 18px;
 					outline: none;
 					color: #374151;
 					background: #fff;
-					position: relative;
-          width: 308px;
+					width: 250px;
+          cursor: pointer;
 
 					&::placeholder {
 						color: #9ca3af;
@@ -124,21 +127,17 @@
 				}
 
 				button {
-					background: #1f2c3c;
+					background: #2a3647;
 					color: #fff;
 					border: none;
 					border-radius: 10px;
-					padding: 12px;
+					padding: 8px;
 					font-size: 22px;
 					font-weight: bold;
 					cursor: pointer;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-          width: 200px;
+          margin-top: 12px;
 
 					&::after {
-						content: " ✓";
 						margin-left: 6px;
 						font-weight: bold;
 					}
