--- a/src/app/main/contacts/add-contact/add-contact.html
+++ b/src/app/main/contacts/add-contact/add-contact.html
@@ -1,7 +1,5 @@
 <div class="main">
-
 	<div class="content">
-
 		<div class="up">
 			<div class="close">x</div>
 			<div>
@@ -14,37 +12,46 @@
 		<div class="middle"></div>
 
 		<div class="down">
-			<form>
-				<label for="name"></label><br />
-				<input
-					placeholder="Name"
-					type="text"
-					id="name"
-					name="name"
-					pattern="^[A-ZÄÖÜa-zäöüß]+(?:\s[A-ZÄÖÜa-zäöüß]+)+$"
-					required
-				/>
-				<label for="email"></label><br />
-				<input
-					placeholder="Email"
-					type="email"
-					id="email"
-					name="email"
-					pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
-					required
-				/>
-				<label for="phone"></label><br />
-				<input
-					placeholder="Phone"
-					type="tel"
-					id="phone"
-					name="phone"
-					pattern="^\+?[0-9\s\-]{7,15}$"
-					required
-				/>
-				<button type="submit">Create contact ✓</button>
+			<form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+				<input id="name" placeholder="Name" type="text" formControlName="name" />
+				<div
+					class="error"
+					*ngIf="contactForm.get('name')?.touched && contactForm.get('name')?.invalid"
+				>
+					<span *ngIf="contactForm.get('name')?.errors?.['required']">
+						First & last name is required.
+					</span>
+					<span *ngIf="contactForm.get('name')?.errors?.['pattern']">
+						Please enter first and last name.
+					</span>
+				</div>
+
+				<input id="email" placeholder="Email" type="email" formControlName="email" />
+				<div
+					class="error"
+					*ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.invalid"
+				>
+					<span *ngIf="contactForm.get('email')?.errors?.['required']"> Email is required. </span>
+					<span *ngIf="contactForm.get('email')?.errors?.['email']">
+						Please enter a valid Email.
+					</span>
+				</div>
+
+				<input id="phone" placeholder="Phone" type="tel" formControlName="phone" />
+				<div
+					class="error"
+					*ngIf="contactForm.get('phone')?.touched && contactForm.get('phone')?.invalid"
+				>
+					<span *ngIf="contactForm.get('phone')?.errors?.['required']">
+						Phone number is required.
+					</span>
+					<span *ngIf="contactForm.get('phone')?.errors?.['pattern']">
+						Please enter a valid phonenumber.
+					</span>
+				</div>
+
+				<button type="submit" [disabled]="contactForm.invalid">Create contact ✓</button>
 			</form>
 		</div>
-
 	</div>
 </div>
