--- a/src/app/main/contacts/add-contact/add-contact.scss
+++ b/src/app/main/contacts/add-contact/add-contact.scss
@@ -7,7 +7,7 @@
 	height: 680px;
 	border-radius: 20px;
 	background: #fff;
-  box-shadow: 5px 5px 5px 0 grey;
+	box-shadow: 5px 5px 5px 0 grey;
 
 	.content {
 		display: flex;
@@ -19,34 +19,34 @@
 			color: #fff;
 			width: 100%;
 			height: 280px;
-			padding: 20px;
+			padding: 40px 20px 20px 20px;
 			border-top-left-radius: 20px;
 			border-top-right-radius: 20px;
 			text-align: left;
 
 			.close {
-        display: flex;
-        justify-content: flex-end;
+				display: flex;
+				justify-content: flex-end;
 				font-size: 20px;
 				cursor: pointer;
 			}
 
 			h2 {
-				font-size: 36px;
-				font-weight: 700;
-				padding-top: 40px;
+				font-family: Inter, sans-serif;
+				font-weight: var(--fw-bold);
+				font-size: var(--fs-h1);
 			}
 
 			span {
-				font-size: 18px;
-				color: #d1d5db;
+				font-size: var(--fs-text);
+				font-weight: var(--fw-regular);
 			}
 
 			.blueline {
 				margin-top: 12px;
 				width: 50px;
 				height: 3px;
-				background: #2ea6ff;
+				background: #007cee;
 				border-radius: 2px;
 			}
 		}
@@ -65,7 +65,7 @@
 				z-index: 1;
 				border-radius: 50%;
 				background: #e5e7eb;
-				background-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' height='48' width='48'%3E%3Cpath d='M24 24q-3.3 0-5.65-2.35Q16 19.3 16 16t2.35-5.65Q20.7 8 24 8q3.3 0 5.65 2.35Q32 12.7 32 16t-2.35 5.65Q27.3 24 24 24Zm0 20q-4.1 0-7.75-1.55T9.5 37.5q1.45-2.4 4-3.95Q16 32 24 32q8 0 10.5 1.55t4 3.95q-2.45 4.4-6.1 5.95Q28.1 44 24 44Z'/%3E%3C/svg%3E");
+				background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
 				background-repeat: no-repeat;
 				background-position: center;
 				background-size: 45px;
@@ -79,51 +79,59 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+      padding-top: 40px;
 
 			form {
 				display: flex;
 				flex-direction: column;
 				align-items: center;
-        padding: 0;
-        margin: 0;
-        gap: 8px;
+				padding: 0;
+				margin: 0;
+				gap: 8px;
 
 				input {
 					border: 1px solid #d1d5db;
 					border-radius: 10px;
 					padding: 8px 8px 8px 12px;
-					font-size: 16px;
+					font-size: var(--fs-input);
+          font-weight: var(--fw-regular);
 					outline: none;
 					color: #374151;
 					background: #fff;
 					width: 250px;
-          cursor: pointer;
+					cursor: pointer;
 
 					&::placeholder {
 						color: #9ca3af;
 					}
 				}
 
+				.error {
+					color: red;
+					font-size: var(--fs-small);
+					margin: 0;
+				}
+
 				/* Icons inside inputs */
 				#name {
-					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%239ca3af' viewBox='0 0 24 24'%3E%3Cpath d='M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z'/%3E%3C/svg%3E");
+					background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
 					background-repeat: no-repeat;
 					background-position: right 12px center;
-					background-size: 20px;
+					background-size: 22px;
 				}
 
 				#email {
-					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%239ca3af' viewBox='0 0 24 24'%3E%3Cpath d='M12 13.5L1.5 6h21L12 13.5zM1.5 18V8.25l10.5 7.5 10.5-7.5V18h-21z'/%3E%3C/svg%3E");
+					background-image: url("../../../../../public/images/add_contacts_section/mail.svg");
 					background-repeat: no-repeat;
 					background-position: right 12px center;
-					background-size: 20px;
+					background-size: 22px;
 				}
 
 				#phone {
-					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%239ca3af' viewBox='0 0 24 24'%3E%3Cpath d='M6.6 10.8c1.2 2.4 3.2 4.4 5.6 5.6l1.9-1.9c.2-.2.5-.3.8-.2 1 .3 2.1.5 3.1.5.4 0 .6.2.6.6V20c0 .4-.2.6-.6.6C10.8 20.6 3.4 13.2 3.4 4.6 3.4 4.2 3.6 4 4 4h3.6c.4 0 .6.2.6.6 0 1.1.2 2.1.5 3.1.1.3 0 .6-.2.8l-1.9 1.9z'/%3E%3C/svg%3E");
+					background-image: url("../../../../../public/images/add_contacts_section/call_icon.svg");
 					background-repeat: no-repeat;
 					background-position: right 12px center;
-					background-size: 20px;
+					background-size: 22px;
 				}
 
 				button {
@@ -132,10 +140,10 @@
 					border: none;
 					border-radius: 10px;
 					padding: 8px;
-					font-size: 22px;
+					font-size: var(--fs-button);
 					font-weight: bold;
 					cursor: pointer;
-          margin-top: 12px;
+					margin-top: 32px;
 
 					&::after {
 						margin-left: 6px;
@@ -150,3 +158,6 @@
 		}
 	}
 }
+
+
+
