feat: contact-view added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
-<app-header />
-<app-sidebar />
+<!-- <app-header /> -->
+<!-- <app-contact-view /> -->
+<!-- <app-sidebar /> -->
 <router-outlet />
-<app-footer />
+<!-- <app-footer /> -->
