--- a/src/app/main/contacts/contact-view/contact-view.html
+++ b/src/app/main/contacts/contact-view/contact-view.html
@@ -1,1 +1,31 @@
-<p>contact-view works!</p>
+<div class="title-section">
+  <h1>Contact</h1>
+  <p>Better with a team</p>
+  <hr class="title-underline">
+</div>
+
+@if (contactData; as contact) {
+  <div class="contact-card">
+    
+  
+    <div class="contact-header">
+      <div class="intials" [style.background-color]="color">
+        {{ intials }}
+      </div>
+      <h2 class="contact-name">{{ contact.name }}</h2>
+    </div>
+   
+    <div class="contact-details">
+      <h3>Contact Information</h3>
+      <p>
+        <strong>Email</strong><br>
+        <a href="mailto:{{ contact.email }}">{{ contact.email }}</a>
+      </p>
+      <p>
+        <strong>Phone</strong><br>
+        {{ contact.telephone }}
+      </p>
+    </div>
+
+  </div>
+}
