initials fixed in contact-list component

--- a/src/app/main/contacts/contact-list/contact-list.html
+++ b/src/app/main/contacts/contact-list/contact-list.html
@@ -16,7 +16,7 @@
 						(keydown.space)="onContactSelect(contact.id)"
 					>
 						<div class="profile-picture">
-							<span>{{ contact.intials }}</span>
+							<span>{{ contact.initials }}</span>
 						</div>
 						<div class="contact-info">
 							<span class="name">{{ contact.name }}</span>
