--- a/src/app/main/contacts/contact-view/contact-view.html
+++ b/src/app/main/contacts/contact-view/contact-view.html
@@ -9,8 +9,8 @@
     
   
     <div class="contact-header">
-      <div class="intials" [style.background-color]="color">
-        {{ intials }}
+      <div class="initials" [style.background-color]="color">
+        {{ initials }}
       </div>
       <h2 class="contact-name">{{ contact.name }}</h2>
     </div>
