--- a/src/app/main/contacts/add-contact/add-contact.html
+++ b/src/app/main/contacts/add-contact/add-contact.html
@@ -58,57 +58,60 @@
 
 <div class="main_desktop">
 	<div class="content_desktop">
-		<div class="left">
-			<div class="head">
-				<h2>Add contact</h2>
-				<span>Tasks are better with a team!</span>
-			</div>
-			<div class="blueline"></div>
-		</div>
-	</div>
 
-  <div class="middle_desktop"></div>
+      <div class="left">
+        <div class="head">
+          <img class="logo" src="./public/images/join_logo/join_logo.svg" alt="">
+          <h2>Add contact</h2>
+          <span>Tasks are better with a team!</span>
+        </div>
+        <div class="blueline"></div>
+      </div>
 
-	<div class="right">
-		<form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
-			<input id="name" placeholder="Name" type="text" formControlName="name" />
-			<div
-				class="error"
-				*ngIf="contactForm.get('name')?.touched && contactForm.get('name')?.invalid"
-			>
-				<span *ngIf="contactForm.get('name')?.errors?.['required']">
-					First & last name is required.
-				</span>
-				<span *ngIf="contactForm.get('name')?.errors?.['pattern']">
-					Please enter first and last name.
-				</span>
-			</div>
 
-			<input id="email" placeholder="Email" type="email" formControlName="email" />
-			<div
-				class="error"
-				*ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.invalid"
-			>
-				<span *ngIf="contactForm.get('email')?.errors?.['required']"> Email is required. </span>
-				<span *ngIf="contactForm.get('email')?.errors?.['email']">
-					Please enter a valid Email.
-				</span>
-			</div>
+    <div class="middle_desktop"></div>
 
-			<input id="phone" placeholder="Phone" type="tel" formControlName="phone" />
-			<div
-				class="error"
-				*ngIf="contactForm.get('phone')?.touched && contactForm.get('phone')?.invalid"
-			>
-				<span *ngIf="contactForm.get('phone')?.errors?.['required']">
-					Phone number is required.
-				</span>
-				<span *ngIf="contactForm.get('phone')?.errors?.['pattern']">
-					Please enter a valid phonenumber.
-				</span>
-			</div>
+    <div class="right_desktop">
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+        <input id="name" placeholder="Name" type="text" formControlName="name" />
+        <div
+          class="error"
+          *ngIf="contactForm.get('name')?.touched && contactForm.get('name')?.invalid"
+        >
+          <span *ngIf="contactForm.get('name')?.errors?.['required']">
+            First & last name is required.
+          </span>
+          <span *ngIf="contactForm.get('name')?.errors?.['pattern']">
+            Please enter first and last name.
+          </span>
+        </div>
 
-			<button type="submit" [disabled]="contactForm.invalid">Create contact ✓</button>
-		</form>
-	</div>
+        <input id="email" placeholder="Email" type="email" formControlName="email" />
+        <div
+          class="error"
+          *ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.invalid"
+        >
+          <span *ngIf="contactForm.get('email')?.errors?.['required']"> Email is required. </span>
+          <span *ngIf="contactForm.get('email')?.errors?.['email']">
+            Please enter a valid Email.
+          </span>
+        </div>
+
+        <input id="phone" placeholder="Phone" type="tel" formControlName="phone" />
+        <div
+          class="error"
+          *ngIf="contactForm.get('phone')?.touched && contactForm.get('phone')?.invalid"
+        >
+          <span *ngIf="contactForm.get('phone')?.errors?.['required']">
+            Phone number is required.
+          </span>
+          <span *ngIf="contactForm.get('phone')?.errors?.['pattern']">
+            Please enter a valid phonenumber.
+          </span>
+        </div>
+
+        <button type="submit" [disabled]="contactForm.invalid">Create contact ✓</button>
+      </form>
+    </div>
+  </div>
 </div>
