--- a/src/app/main/contacts/add-contact/add-contact.scss
+++ b/src/app/main/contacts/add-contact/add-contact.scss
@@ -241,7 +241,7 @@
 	}
 }
 
-@media (min-width: 600px) {
+@media (min-width: 601px) {
 	.main_mobile {
 		display: none;
 	}
@@ -249,31 +249,65 @@
 	.main_desktop {
 		display: block;
 		display: flex;
+		align-items: center;
 		width: 600px;
 		height: 480px;
 		border-radius: 20px;
 		background: #fff;
-		box-shadow: 5px 5px 5px 0 grey;
+		box-shadow: 5px 5px 5px 5px grey;
+		margin: 0;
 
-		.middle_desktop {
-			width: 100%;
+		.content_desktop {
 			display: flex;
-			justify-content: center;
-			margin-top: -40px;
+			align-items: center;
+			height: 100%;
+      width: 100%;
 
-			&::before {
-				content: "";
-				display: block;
-				width: 90px;
-				height: 90px;
-				z-index: 1;
-				border-radius: 50%;
-				background: #e5e7eb;
-				background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
-				background-repeat: no-repeat;
-				background-position: center;
-				background-size: 45px;
-				border: 4px solid #fff;
+			.left {
+				width: 40%;
+				height: 100%;
+				background: #2a3647;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+        color: whitesmoke;
+        border-radius: 20px 0 0 20px;
+        padding: 20px;
+
+				.head {
+					height: 100%;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+				}
+
+				.middle_desktop {
+					width: 20%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					&::before {
+						content: "";
+						display: block;
+						width: 100px;
+						height: 100px;
+						z-index: 1;
+						border-radius: 50%;
+						background: #e5e7eb;
+						background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
+						background-repeat: no-repeat;
+						background-position: center;
+						background-size: 60px;
+						border: 4px solid #fff;
+					}
+				}
+
+				.right_desktop {
+					width: 40%;
+          display: flex;
+          flex-direction: column;
+				}
 			}
 		}
 	}
