--- a/src/app/main/contacts/add-contact/add-contact.scss
+++ b/src/app/main/contacts/add-contact/add-contact.scss
@@ -146,6 +146,9 @@
 					font-weight: bold;
 					cursor: pointer;
 					margin-top: 32px;
+					display: flex;
+					align-items: center;
+					gap: 4px;
 
 					&::after {
 						margin-left: 6px;
@@ -261,7 +264,7 @@
 			display: flex;
 			align-items: center;
 			height: 100%;
-      width: 100%;
+			width: 100%;
 
 			.left {
 				width: 40%;
@@ -270,9 +273,15 @@
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
-        color: whitesmoke;
-        border-radius: 20px 0 0 20px;
-        padding: 20px;
+				color: whitesmoke;
+				border-radius: 20px 0 0 20px;
+				padding: 20px;
+
+				.logo {
+					height: 64px;
+					width: 64px;
+					margin-bottom: 12px;
+				}
 
 				.head {
 					height: 100%;
@@ -281,32 +290,150 @@
 					justify-content: center;
 				}
 
-				.middle_desktop {
-					width: 20%;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-
-					&::before {
-						content: "";
-						display: block;
-						width: 100px;
-						height: 100px;
-						z-index: 1;
-						border-radius: 50%;
-						background: #e5e7eb;
-						background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
-						background-repeat: no-repeat;
-						background-position: center;
-						background-size: 60px;
-						border: 4px solid #fff;
-					}
+				h2 {
+					font-family: Inter, sans-serif;
+					font-weight: var(--fw-bold);
+					font-size: var(--fs-h1);
 				}
 
-				.right_desktop {
-					width: 40%;
-          display: flex;
-          flex-direction: column;
+				span {
+					font-size: var(--fs-text);
+					font-weight: var(--fw-regular);
+				}
+
+				.blueline {
+					margin-top: 12px;
+					width: 50px;
+					height: 3px;
+					background: #007cee;
+					border-radius: 2px;
+				}
+			}
+
+			.middle_desktop {
+				width: 20%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				&::before {
+					content: "";
+					display: block;
+					width: 90px;
+					height: 90px;
+					z-index: 1;
+					border-radius: 50%;
+					background: #e5e7eb;
+					background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
+					background-repeat: no-repeat;
+					background-position: center;
+					background-size: 50px;
+					border: 4px solid #fff;
+				}
+			}
+
+			.right_desktop {
+				width: 40%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				height: 100%;
+
+				form {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					padding: 0;
+					margin: 0;
+					gap: 8px;
+
+					input {
+						border: 1px solid #d1d5db;
+						border-radius: 10px;
+						padding: 8px 8px 8px 12px;
+						font-size: var(--fs-input);
+						font-weight: var(--fw-regular);
+						outline: none;
+						color: #374151;
+						background: #fff;
+						width: 200px;
+						cursor: pointer;
+
+						&::placeholder {
+							color: #9ca3af;
+						}
+					}
+
+					.error {
+						color: red;
+
+						span {
+							font-size: 14px;
+						}
+					}
+
+					/* Icons inside inputs */
+					#name {
+						background-image: url("../../../../../public/images/add_contacts_section/person_icon.svg");
+						background-repeat: no-repeat;
+						background-position: right 12px center;
+						background-size: 22px;
+					}
+
+					#email {
+						background-image: url("../../../../../public/images/add_contacts_section/mail.svg");
+						background-repeat: no-repeat;
+						background-position: right 12px center;
+						background-size: 22px;
+					}
+
+					#phone {
+						background-image: url("../../../../../public/images/add_contacts_section/call_icon.svg");
+						background-repeat: no-repeat;
+						background-position: right 12px center;
+						background-size: 22px;
+					}
+
+					button {
+						background: #2a3647;
+						color: #fff;
+						border: none;
+						border-radius: 10px;
+						padding: 8px;
+						font-size: var(--fs-button);
+						font-weight: bold;
+						cursor: pointer;
+						margin-top: 32px;
+						display: flex;
+						align-items: center;
+						gap: 4px;
+
+						&::after {
+							margin-left: 6px;
+							font-weight: bold;
+						}
+
+						&:hover {
+							background: #007cee;
+						}
+					}
+
+					.close_overlay {
+						background-color: #ffffff;
+						border: 1px solid #2a3647;
+						color: #2a3647;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+
+            &:hover {
+							color: #007cee;
+              background-color: #ffffff;
+              border: 1px solid #007cee;
+              box-shadow: 1px 1px 1px 1px grey;
+						}
+					}
 				}
 			}
 		}
