removed the commented line from app.html

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
-<!-- <app-header /> -->
-<!-- <app-contact-view /> -->
-<!-- <app-sidebar /> -->
+<app-header />
+<app-contact-view />
+<app-sidebar />
 <router-outlet />
-<!-- <app-footer /> -->
+<app-footer />
