Added Contacts Component to have Contact List and Contact View inside

--- a/src/app/main/contacts/contact-list/contact-list.scss
+++ b/src/app/main/contacts/contact-list/contact-list.scss
@@ -1,7 +1,32 @@
+@use "../../../../styles/mixins";
+
 :host {
 	display: block;
 	height: 100%;
 	width: 100%;
+	grid-column: 1;
+	grid-row: 1;
+
+	@include mixins.desktop {
+		grid-column: revert;
+		grid-row: revert;
+	}
+}
+
+:host.mobile-d-none {
+	display: none;
+
+	@include mixins.desktop {
+		display: revert;
+	}
+}
+
+.list {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .all-contacts {
