--- a/src/app/main/contacts/add-contact/add-contact.scss
+++ b/src/app/main/contacts/add-contact/add-contact.scss
@@ -8,6 +8,11 @@
 	border-radius: 20px;
 	background: #fff;
 	box-shadow: 5px 5px 5px 0 grey;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1000;
 
 	.content_mobile {
 		display: flex;
@@ -257,8 +262,13 @@
 		height: 480px;
 		border-radius: 20px;
 		background: #fff;
-		box-shadow: 5px 5px 5px 5px grey;
+		box-shadow: 1px 1px 5px 5px grey;
 		margin: 0;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 1000;
 
 		.content_desktop {
 			display: flex;
