--- a/src/app/main/contacts/contact-list/contact-list.html
+++ b/src/app/main/contacts/contact-list/contact-list.html
@@ -1,5 +1,22 @@
 <div class="list">
-	<button>Add Contact</button>
+	<!-- desktop add_contactsbtn -->
+	<app-button
+		class="desktop-add-button"
+		variant="primary"
+		icon="/images/contacts_section/person_add.svg"
+		[fullWidth]="true"
+		(clickEvent)="onAddNewContact()">
+		Add new contact
+	</app-button>
+
+	<!-- mobile add_contactsbtn FAB = floating action button!!! -->
+	<app-button
+		class="mobile-fab-button"
+		variant="primary"
+		icon="/images/contacts_section/person_add.svg"
+		(clickEvent)="onAddNewContact()">
+	</app-button>
+
 	<div class="all-contacts">
 		@for (item of contactService.contactsObject | keyvalue; track $index) {
 			@let letter = item.key;
