add overlay backdrop with blur and interaction lock

--- a/src/app/main/contacts/contacts.html
+++ b/src/app/main/contacts/contacts.html
@@ -2,6 +2,9 @@
 	<app-contact-list [class.mobile-d-none]="!showList" (addContactClicked)="onAddContactClicked()"/>
 	<app-contact-view [id]="id" [class.mobile-d-none]="showList" />
   @if (isAddContactOpen) {
-    <app-add-contact (closed)="onAddContactClosed()" />
+    <div class="overlay-wrapper">
+			<div class="overlay-backdrop"></div>
+			<app-add-contact (closed)="onAddContactClosed()" />
+		</div>
   }
 </section>
