--- a/src/app/main/contacts/contacts.scss
+++ b/src/app/main/contacts/contacts.scss
@@ -10,3 +10,21 @@ section {
 		grid-template-rows: 100%;
 	}
 }
+
+.overlay-wrapper {
+	position: fixed;
+	inset: 0;
+	z-index: 1000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.overlay-backdrop {
+	position: absolute;
+	inset: 0;
+	backdrop-filter: blur(4px);
+	background: rgba(0, 0, 0, 0.1);
+	pointer-events: all;
+	z-index: 1000;
+}
