--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,3 +4,16 @@
 </main>
 <app-footer />
 <app-add-contact />
+
+<!-- Global Toast -->
+@if (currentToast()) {
+	<app-toast
+		[type]="currentToast()!.type"
+		[title]="currentToast()!.title"
+		[message]="currentToast()!.message"
+		[duration]="currentToast()!.duration || 1500"
+		[showCloseButton]="false"
+		[icon]="currentToast()!.icon"
+		(closeEvent)="toastService.hide()">
+	</app-toast>
+}
