completed connections with other components

--- a/src/app/main/contacts/contact-list/contact-list.html
+++ b/src/app/main/contacts/contact-list/contact-list.html
@@ -3,9 +3,9 @@
 	<app-button
 		class="desktop-add-button"
 		variant="primary"
-		icon="/images/contacts_section/person_add.svg"
+		icon="/images/contacs_section/person_add.svg"
 		[fullWidth]="true"
-		(clickEvent)="onAddNewContact()"
+		(clickEvent)="openAddContact()"
 	>
 		Add new contact
 	</app-button>
@@ -14,8 +14,8 @@
 	<app-button
 		class="mobile-fab-button"
 		variant="primary"
-		icon="/images/contacts_section/person_add.svg"
-		(clickEvent)="onAddNewContact()"
+		icon="/images/contacs_section/person_add.svg"
+		(clickEvent)="openAddContact()"
 	>
 	</app-button>
 
