--- a/src/app/shared/components/contact-menu/contact-menu.html
+++ b/src/app/shared/components/contact-menu/contact-menu.html
@@ -1,25 +1,24 @@
 <!-- Contact Menu Button -->
 <app-button
-  variant="contact-menu"
-  icon="/images/contacts_section/contact_mobile_btn.svg"
-  (clickEvent)="toggleMenu()">
+	variant="contact-menu"
+	icon="/images/contacs_section/contact_mobile_btn.svg"
+	(clickEvent)="toggleMenu()"
+>
 </app-button>
 
 <!-- Menu Dropdown -->
 @if (isMenuOpen()) {
-  <div class="contact-menu-dropdown">
-    <app-button
-      variant="edit"
-      icon="/images/contacts_section/edit.svg"
-      (clickEvent)="onEdit()">
-      Edit
-    </app-button>
+	<div class="contact-menu-dropdown">
+		<app-button variant="edit" icon="/images/contacs_section/edit.svg" (clickEvent)="onEdit()">
+			Edit
+		</app-button>
 
-    <app-button
-      variant="delete"
-      icon="/images/contacts_section/trash_icon.svg"
-      (clickEvent)="onDelete()">
-      Delete
-    </app-button>
-  </div>
+		<app-button
+			variant="delete"
+			icon="/images/contacs_section/trash_icon.svg"
+			(clickEvent)="onDelete()"
+		>
+			Delete
+		</app-button>
+	</div>
 }
