feat: avatar color added

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -44,3 +44,16 @@ html {
 	--header-height: 8vh;
 	--padding-left-desktop: calc(var(--footer-width-desktop) + 1rem);
 }
+
+:root {
+	--avatar-color-1: #15e222;
+	--avatar-color-2: #3f8efc;
+	--avatar-color-3: #e7e711;
+	--avatar-color-4: #ff5c5c;
+	--avatar-color-5: #8e44ad;
+	--avatar-color-6: #16a085;
+	--avatar-color-7: #e67e22;
+	--avatar-color-8: #2c3e50;
+	--avatar-color-9: #df1a1a;
+	--avatar-color-10: #15e6b1;
+}
