added edit-contacts. added code in contact-view.ts html

--- a/src/app/main/contacts/contact-view/contact-view.html
+++ b/src/app/main/contacts/contact-view/contact-view.html
@@ -36,4 +36,14 @@
 			</p>
 		</div>
 	</div>
+
+	<!--Overlay edit -->
+	@if (isEditOverlayOpen()) {
+		<app-edit-contact
+			[contactId]="onEditContactId()"
+			(closed)="onCloseEditOverlay()"
+			(saved)="goBack()"
+		>
+		</app-edit-contact>
+	}
 }
