update: gap added b/w contact name and initials

--- a/src/app/main/contacts/contact-view/contact-view.scss
+++ b/src/app/main/contacts/contact-view/contact-view.scss
@@ -97,6 +97,10 @@
 	align-items: center;
 	gap: 1rem;
 	margin-bottom: 1.5rem;
+
+	@include mixins.desktop {
+		gap: 3rem;
+	}
 }
 
 .title-underline {
