--- a/src/app/main/contacts/contact-view/contact-view.scss
+++ b/src/app/main/contacts/contact-view/contact-view.scss
@@ -3,6 +3,8 @@
 :host {
 	grid-column: 1;
 	grid-row: 1;
+	box-shadow: 4px 4px 4px #0000001a inset;
+	background-color: var(--bg-color-gray);
 
 	@include mixins.desktop {
 		grid-column: revert;
@@ -83,7 +85,6 @@
 }
 
 .contact-card {
-	background-color: #fff;
 	padding: 1rem;
 	max-width: 500px;
 
