style: apply desktop mixin to enter animation for improved responsiveness

--- a/src/app/main/contacts/contact-view/contact-view.scss
+++ b/src/app/main/contacts/contact-view/contact-view.scss
@@ -1,7 +1,9 @@
 @use "../../../../styles/mixins";
 
 .enter-animation {
-	animation: slide-fade 1s;
+	@include mixins.desktop {
+		animation: slide-fade 1s;
+	}
 }
 
 @keyframes slide-fade {
