fix: correct class binding for technical task in TaskLabel component

--- a/src/app/shared/components/task-label/task-label.html
+++ b/src/app/shared/components/task-label/task-label.html
@@ -1,7 +1,7 @@
 <span
 	class="label"
 	[class.user-story]="categoryClean() === 'userstory'"
-	[class.user-story]="categoryClean() === 'technicaltask'"
+	[class.technical-task]="categoryClean() === 'technicaltask'"
 >
 	@if (categoryClean() === "userstory") {
 		User Story
