feat: update button styles for improved user experience and modify input hint color for better visibility

--- a/src/app/shared/components/search-field/search-field.scss
+++ b/src/app/shared/components/search-field/search-field.scss
@@ -66,7 +66,9 @@ button {
 	transition:
 		background-color 125ms,
 		scale 125ms;
+	user-select: none;
 	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
 }
 
 button:hover {
