--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -63,5 +63,5 @@ html {
 	--task-category-color-teal: #1fd7c1;
 	--task-category-color-teal-hovered: hsl(173deg 75% 58%);
 	--input-focus-color: #6dbfe9;
-	--input-hint-color-blue: #0038ff;
+	--input-hint-color-blue: #0af;
 }
